--- a/ghostdev/package.json
+++ b/ghostdev/package.json
@@ -1,20 +1,22 @@
 {
   "name": "ghostdev",
-  "displayName": "GhostDev",
+  "displayName": "ghostdev",
   "description": "",
   "version": "0.0.1",
+  "type": "module",
   "engines": {
-    "vscode": "^1.100.0"
+    "vscode": "^1.101.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [],
-  "main": "./extension.js",
+  "main": "./extension.cjs",
   "contributes": {
-    "commands": [
-      
-    ]
+    "commands": [{
+      "command": "ghostdev.auth",
+      "title": "AUTH"
+    }]
   },
   "scripts": {
     "lint": "eslint .",
@@ -22,14 +24,11 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/vscode": "^1.101.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "@types/vscode": "^1.100.0",
+    "eslint": "^9.25.1",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2",
-    "eslint": "^9.25.1"
-  },
-  "dependencies": {
-    "node": "^22.16.0"
+    "@vscode/test-electron": "^2.5.2"
   }
 }
