--- a/ghostdev/package.json
+++ b/ghostdev/package.json
@@ -13,10 +13,16 @@
   "activationEvents": [],
   "main": "./extension.cjs",
   "contributes": {
-    "commands": [{
-      "command": "ghostdev.auth",
-      "title": "AUTH"
-    }]
+    "commands": [
+      {
+        "command": "ghostdev.auth",
+        "title": "AUTH"
+      },
+      {
+        "command": "ghostdev.newRepo",
+        "title": "NEW REPO"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -24,11 +30,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.101.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "eslint": "^9.25.1",
+    "@types/vscode": "^1.101.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.25.1"
+  },
+  "dependencies": {
+    "redis": "^5.5.6"
   }
 }
