chore: changes in suggest commit

--- a/ghostdev/package.json
+++ b/ghostdev/package.json
@@ -25,6 +25,10 @@
       {
         "command": "ghostdev.logout",
         "title": "LOGOUT"
+      },
+      {
+        "command": "ghostdev.suggestCommit",
+        "title": "COMMIT"
       }
     ]
   },
