--- a/ghostdev/package.json
+++ b/ghostdev/package.json
@@ -10,7 +10,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["*"],
   "main": "./src/extension.cjs",
   "contributes": {
     "commands": [
@@ -25,6 +25,10 @@
       {
         "command": "ghostdev.logout",
         "title": "LOGOUT"
+      },
+      {
+      "command": "ghostdev.runFunction",
+      "title": "Get Suggestions"
       }
     ]
   },
