--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,18 +2,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "Run Extension",
+            "type": "extensionHost",
             "request": "launch",
-            "name": "Launch Extension",
-            "program": "${workspaceFolder}/node_modules/.bin/vsce",
+            "runtimeExecutable": "${execPath}",
             "args": [
-                "package"
+                "--extensionDevelopmentPath=${workspaceFolder}"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
-            ],
-            "preLaunchTask": "npm: watch",
-            "postDebugTask": "npm: clean"
+            ]
         }
     ]
 }
