--- a/package.json
+++ b/package.json
@@ -16,18 +16,6 @@
       {
         "command": "extension.improveCode",
         "title": "Improve Code"
-      },
-      {
-        "command": "extension.suggetCommitMessage",
-        "title": "Suggest Commit Message"
-      },
-      {
-        "command": "extension.createRepo",
-        "title": "Create Repo"
-      },
-      {
-        "command": "extension.commentDocs",
-        "title": "Comment Docs"
       }
     ]
   },
@@ -38,6 +26,7 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "typescript": "^4.0.0",
     "vscode": "^1.1.36",
     "webpack": "^5.0.0",
