--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.2",
+    "jsonc-parser": "^3.3.1",
     "node-fetch": "^3.3.2"
   },
   "extensionDependencies": [
