--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "jsonc-parser": "^3.3.1",
     "node-fetch": "^3.3.2"
