--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
+    "@types/node": "^24.9.1",
+    "@types/vscode": "^1.105.0",
     "copyfiles": "^2.4.1",
     "typescript": "^4.0.0",
     "vscode": "^1.1.36",
